Fixed blurry images in Google Chrome

--- a/stylesSM.css
+++ b/stylesSM.css
@@ -110,6 +110,7 @@ p {
 img {
 	max-width: 100%;
 	height: auto;
+	image-rendering: -webkit-optimize-contrast;
 	/*margin: 5px;*/
 }
 /* [1] The container */
